--- a/Proiect/SignUp.css
+++ b/Proiect/SignUp.css
@@ -18,12 +18,6 @@ header h1 {
 
 }
 
-section h2 {
-    text-align: center;
-    margin-top: 2%;
-    color: tomato;
-}
-
 .signUpArea {
     position: absolute;
     left: 50%;
@@ -33,6 +27,12 @@ section h2 {
     opacity: 0.8;
     background: black;
     padding: 2.6%;
+}
+
+.signUpArea h2 {
+    text-align: center;
+    margin-top: 2%;
+    color: tomato;
 }
 
 .signUpArea p {
