--- a/Proiect/style/SignUp/SignUp.css
+++ b/Proiect/style/SignUp/SignUp.css
@@ -15,6 +15,7 @@ header h1 {
     text-align: center;
     color: tomato;
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-size: 50px;
 
 }
 
@@ -22,22 +23,25 @@ header h1 {
     position: absolute;
     left: 50%;
     top: 50%;
-    transform: translate(-50%, -40%);
+    transform: translate(-50%, -25%);
     box-sizing: border-box;
     opacity: 0.8;
     background: black;
     padding: 2.6%;
+    width: 40%;
 }
 
 .signUpArea h2 {
     text-align: center;
-    margin-top: 2%;
+    margin-top: 1.5%;
     color: tomato;
+    font-size: 30px;
 }
 
 .signUpArea p {
     color: white;
     font-weight: bold;
+    font-size: 24px;
 }
 
 .signUpArea input, button {
@@ -46,16 +50,19 @@ header h1 {
     border-bottom: 1px solid white;
     background-color: transparent;
     height: 27px;
+    font-size: 20px;
 }
 
 /* culoarea care ramane dupa ce scriem */
 input {
     color: white;
+    font-size: 20px;
 }
 
 /* culoarea cu care scriem */
 input:focus {
     color: white;
+    font-size: 20px;
 }
 
 
@@ -73,5 +80,5 @@ input:focus {
 }
 
 .signUpArea input:hover {
-    border: 2px solid blue;
+    border: 2.5px solid blue;
 }
