--- a/Proiect/style/ForgotPassword/ForgotPassword.css
+++ b/Proiect/style/ForgotPassword/ForgotPassword.css
@@ -13,37 +13,47 @@ body {
     position: absolute;
     left: 50%;
     top: 53%;
-    transform: translate(-70%, -80%);
+    transform: translate(-70%, -75%);
 }
 
 .forgotPasswordArea h2 {
     color: purple;
+    font-size: 30px;
+    text-align: center;
 }
 
 #firstParagraph {
     text-align: center;
     font-weight: bold;
+    font-size: 23px;
     margin-bottom: 10%;
 }
 
+.space {
+    margin-left: 5%;
+    margin-right: 2%;
+}
+
 .forgotPasswordArea input[type=tel] {
-    height: 30px;
+    height: 40px;
     width: 80%;
-    border: 2px solid aqua;
-    padding: 2%;
     margin: 3%;
+    border: 2px solid aqua;
     background-color: azure;
+    font-size: 16px;
 }
 
 .forgotPasswordArea button[type=submit] {
     cursor: pointer;
     height: 40px;
+    width: 60%;
     border: none;
     border-radius: 20px;
-    background-color: purple;
+    background-color: limegreen;
     color: white;
     text-align: center;
     float: right;
+    font-size: 17px;
 }
 
 .forgotPasswordArea button[type=submit]:hover {
