--- a/Proiect/style/addSenzor/respSmall2-senzor.css
+++ b/Proiect/style/addSenzor/respSmall2-senzor.css
@@ -1,7 +1,10 @@
+.header-logoMobile{
+    margin-left:12%;
+}
 .collapsible-menu{
     padding: 0px 10px; 
     margin-top:-11%;
-    
+    margin-left:-11%;
 }
 .collapsible-menu label{
     padding:3px 3px 3px 15px; 
@@ -11,4 +14,7 @@
     margin-left:26%;
     padding: 15px 40px;
 
+}
+.notificationSmall{
+    margin-top:-7%;
 }
