--- a/Proiect/style/map/respSmall2-map.css
+++ b/Proiect/style/map/respSmall2-map.css
@@ -1,6 +1,10 @@
+.header-logoMobile{
+    margin-left:12%;
+}
 .collapsible-menu{
     padding: 0px 10px; 
     margin-top:-11%;
+    margin-left:-11%;
     
 }
 .collapsible-menu label{
