--- a/Proiect/style/map/respSmall-map.css
+++ b/Proiect/style/map/respSmall-map.css
@@ -4,10 +4,13 @@
 .collapsible-menu{
     padding: 0px 15px; 
     margin-top:-9%;
-    
+    margin-left:-3%;
 }
 .pagesMobile{
     
     padding: 0 0 0 25px;
 
+}
+#map{
+    margin-top:25%;
 }
