--- a/Proiect/style/SignUp/SignUp.css
+++ b/Proiect/style/SignUp/SignUp.css
@@ -14,7 +14,7 @@ header h1 {
     font-family: Georgia;
     text-align: center;
     color: tomato;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-shadow: 2px 2px black;
     font-size: 50px;
 
 }
