--- a/Proiect/Views/html/Login.html
+++ b/Proiect/Views/html/Login.html
@@ -24,7 +24,7 @@
                     <input type="email" placeholder="Email Address" name="email" required>
                     <input type="password" placeholder="Password" name="password" required>
                     <button type="submit" ><strong> Login </strong></button>
-                    <span id="password">Forgot <a href="ForgotPassword.html">password?</a></span>
+                    <span id="password">Forgot <a href="/forgotPassword">password?</a></span>
                 </div>
         </form>
         </div>
