--- a/Proiect/Views/html/addSenzor.html
+++ b/Proiect/Views/html/addSenzor.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <title> Adaugare Copil </title>
         <link rel="stylesheet" href="../css/addSenzor/senzor.css">
-        <link rel="stylesheet" media="(min-width:1400px)" href="../css/addSenzor/respLarge-senzor.css">
         <link rel="stylesheet" media="(max-width:1050px)" href="../css/addSenzor/respMedium-senzor.css">
         <link rel="stylesheet" media="(max-width:925px)" href="../css/addSenzor/respMedium2-senzor.css">
         <link rel="stylesheet" media="(max-width:750px)" href="../css/addSenzor/respMedium3-senzor.css">
@@ -19,11 +18,11 @@
         <header>
             <img class="header-logo" src="../images/pageLogo.png" alt="Logo">
             <div class="pages">
-                <a href="map.html">Harta</a>
-                <a href="addSenzor.html"> Adaugare senzor</a>
-                <a href="ModificareSenzor.html">Modificare senzor</a>
-                <a href="ActualizareProfil.html">Actualizare profil</a>
-                <a href="index.html">Logout</a>
+                <li><a href="/map">Harta</a></li>
+                <li><a href="/adaugareSenzor">Adaugare senzor</a></li>
+                <li><a href="/modificareSenzor">Modificare senzor</a></li>
+                <li><a href="/actualizareProfil">Actualizare profil</a></li>
+                <li><a href="/">Logout</a></li>
             </div>
         </header>
         <div class="headerSmaller">
@@ -34,11 +33,11 @@
            
                 <div class="pagesMobile">
                     <ul>
-                        <li><a href="map.html">Harta</a></li>
-                        <li><a href="addSenzor.html">Adaugare senzor</a></li>
-                        <li><a href="ModificareSenzor.html">Modificare senzor</a></li>
-                        <li><a href="ActualizareProfil.html">Actualizare profil</a></li>
-                        <li><a href="index.html">Logout</a></li>
+                        <li><a href="/map">Harta</a></li>
+                        <li><a href="/adaugareSenzor">Adaugare senzor</a></li>
+                        <li><a href="/modificareSenzor">Modificare senzor</a></li>
+                        <li><a href="/actualizareProfil">Actualizare profil</a></li>
+                        <li><a href="/">Logout</a></li>
                     </ul>
                 </div>
             </div>
