--- a/Proiect/Views/html/index.html
+++ b/Proiect/Views/html/index.html
@@ -20,12 +20,12 @@
             <img class="subtitle" src="../images/subtitle.png" alt="Subtitlul">
             <img class="logo" src="../images/Asset2.png" alt="Logo">
             <div class="login-wrapper">
-                <a href="Login.html"><img class="loginButton" src="../images/login.png" alt="Buton logare" ></a>
-                <a href="Login.html"><img class="overlayLogin" src="../images/login-hover.png" alt="Buton logare"></a>
+                <a href="/login"><img class="loginButton" src="../images/login.png" alt="Buton logare" ></a>
+                <a href="/login"><img class="overlayLogin" src="../images/login-hover.png" alt="Buton logare"></a>
             </div>
             <div class="signin-wrapper">
-                <a href="SignUp.html"><img class="signinButton" src="../images/signin.png" alt="Buton SignUp"></a>
-                <a href="SignUp.html"><img class="overlaySignin" src="../images/signin-hover.png" alt="Buton SignUp"></a>
+                <a href="/signup"><img class="signinButton" src="../images/signin.png" alt="Buton SignUp"></a>
+                <a href="/signup"><img class="overlaySignin" src="../images/signin-hover.png" alt="Buton SignUp"></a>
             </div>
         </div>
     </body>
