--- a/Proiect/Views/html/map.html
+++ b/Proiect/Views/html/map.html
@@ -19,11 +19,11 @@
         <header>
             <img class="header-logo" src="../images/pageLogo.png" alt="Logo">
             <div class="pages">
-                <a href="map.html">Harta</a>
-                <a href="addSenzor.html">Adaugare senzor</a>
-                <a href="ModificareSenzor.html">Modificare senzor</a>
-                <a href="ActualizareProfil.html">Actualizare profil</a>
-                <a href="index.html">Logout</a>
+                <li><a href="/map">Harta</a></li>
+                <li><a href="/adaugareSenzor">Adaugare senzor</a></li>
+                <li><a href="/modificareSenzor">Modificare senzor</a></li>
+                <li><a href="/actualizareProfil">Actualizare profil</a></li>
+                <li><a href="/">Logout</a></li>
             </div>
         </header>
 
@@ -35,11 +35,11 @@
            
                 <div class="pagesMobile">
                     <ul>
-                        <li><a href="map.html">Harta</a></li>
-                        <li><a href="addSenzor.html">Adaugare senzor</a></li>
-                        <li><a href="ModificareSenzor.html">Modificare senzor</a></li>
-                        <li><a href="ActualizareProfil.html">Actualizare profil</a></li>
-                        <li><a href="index.html">Logout</a></li>
+                        <li><a href="/map">Harta</a></li>
+                        <li><a href="/adaugareSenzor">Adaugare senzor</a></li>
+                        <li><a href="/modificareSenzor">Modificare senzor</a></li>
+                        <li><a href="/actualizareProfil">Actualizare profil</a></li>
+                        <li><a href="/">Logout</a></li>
                     </ul>
                 </div>
             </div>
