--- a/Proiect/Views/css/ModificareSenzor/ModificareSenzor.css
+++ b/Proiect/Views/css/ModificareSenzor/ModificareSenzor.css
@@ -21,6 +21,11 @@ header .pages{
     margin-left:3%;
     margin-top:2%; 
     color:white;
+    list-style: none;
+}
+
+.pages li {
+    margin-left: 5%;
 }
 
 header a{
