--- a/Proiect/Views/css/ModificareSenzor/ModificareSenzorMax1300.css
+++ b/Proiect/Views/css/ModificareSenzor/ModificareSenzorMax1300.css
@@ -97,6 +97,7 @@ input#menuToggler{
     color:white;
     background-color:#202023;
     padding: 0 0 0 50px;
+    list-style: none;
 }
 
 input:checked ~ .pagesMobile{
