--- a/Proiect/Views/html/ModificareSenzor.html
+++ b/Proiect/Views/html/ModificareSenzor.html
@@ -18,11 +18,11 @@
         <header>
             <img class="header-logo" src="../images/pageLogo.png" alt="Smiley face">
             <div class="pages">
-                <a href="map.html"> Harta </a>
-                <a href="addSenzor.html"> Adaugare senzor </a>
-                <a href="ModificareSenzor.html"> Modificare senzor </a>
-                <a href="ActualizareProfil.html">Actualizare profil</a>
-                <a href="index.html">Logout</a>
+                <li><a href="/map">Harta</a></li>
+                <li><a href="/adaugareSenzor">Adaugare senzor</a></li>
+                <li><a href="/modificareSenzor">Modificare senzor</a></li>
+                <li><a href="/actualizareProfil">Actualizare profil</a></li>
+                <li><a href="/">Logout</a></li>
             </div>
         </header>
 
@@ -34,11 +34,11 @@
            
                 <div class="pagesMobile">
                     <ul>
-                        <li><a href="map.html">Harta</a></li>
-                        <li><a href="addSenzor.html">Adaugare senzor</a></li>
-                        <li><a href="ModificareSenzor.html">Modificare senzor</a></li>
-                        <li><a href="ActualizareProfil.html">Actualizare profil</a></li>
-                        <li><a href="index.html">Logout</a></li>
+                        <li><a href="/map">Harta</a></li>
+                        <li><a href="/adaugareSenzor">Adaugare senzor</a></li>
+                        <li><a href="/modificareSenzor">Modificare senzor</a></li>
+                        <li><a href="/actualizareProfil">Actualizare profil</a></li>
+                        <li><a href="/">Logout</a></li>
                     </ul>
                 </div>
             </div>
