--- a/Proiect/Views/html/ActualizareProfil.html
+++ b/Proiect/Views/html/ActualizareProfil.html
@@ -48,13 +48,13 @@
             <h2> Modificare date </h2>
                 <form action="map.html">
                     <p>Numar de telefon</p>
-                        <input type="text" placeholder="Introduceti numarul de telefon" name="distance">
+                        <input type="text" placeholder="Introduceti numarul de telefon" name="phoneNumber">
                     <p>Email</p>
-                        <input type="text" placeholder="Introduceti email" name="age">
+                        <input type="text" placeholder="Introduceti email" name="email">
                     <p>Parola curenta</p>
-                        <input type="password" placeholder="Introduceti parola" name="adress" required>
+                        <input type="password" placeholder="Introduceti parola" name="password" required>
                     <p> Noua parola</p>
-                        <input type="password" placeholder="Introduceti noua parola" name="adress">
+                        <input type="password" placeholder="Introduceti noua parola" name="newPassword">
                     <button type="submit"><strong> Submit </strong></button>
                 </form>
         </div>
