redirect to map page + alert the user for bad credentials

--- a/Proiect/Views/html/SignUp.html
+++ b/Proiect/Views/html/SignUp.html
@@ -23,7 +23,7 @@
 
         <div class="signUpArea">  
             <h2> Create a New Account </h2> 
-            <form action="map.html" method="POST" class="signUpForm">
+            <form action="/map" method="POST" class="signUpForm">
                 <p> First Name </p>
                     <input type="text" placeholder="enter first name" name="firstName" required>
                 <p> Last Name </p>
