sensorModel, alert the user(forgotPssword page)

--- a/Proiect/Views/html/ActualizareProfil.html
+++ b/Proiect/Views/html/ActualizareProfil.html
@@ -46,7 +46,7 @@
 
         <div class="modification">
             <h2> Modificare date </h2>
-                <form action="map.html">
+                <form action="/actualizareProfil" method="POST" class="actualizare-form">
                     <p>Numar de telefon</p>
                         <input type="text" placeholder="Introduceti numarul de telefon" name="phoneNumber">
                     <p>Email</p>
